--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pbt/lib/forge-std"]
 	path = pbt/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "pbt/lib/openzeppelin-contracts"]
+	path = pbt/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
