--- a/bot/package.json
+++ b/bot/package.json
@@ -3,15 +3,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc -w & sleep 1 && node --watch dist/index.js",
-    "start": "node dist/index.js",
-    "postinstall": "tsc"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "@xmtp/message-kit": "latest"
   },
   "engines": {
     "node": ">=20"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
