Support Sign protocol

--- a/bot/package.json
+++ b/bot/package.json
@@ -9,6 +9,7 @@
     "docker:debug": "docker run -p 9229:9229 -v ./src:/root/app/src -it --env-file .env resell-bot:dev npm run dev"
   },
   "dependencies": {
+    "@ethsign/sp-sdk": "^0.7.8",
     "@xmtp/message-kit": "latest",
     "pinata": "^1.7.2",
     "pinata-web3": "^0.5.2"
