--- a/bot/package.json
+++ b/bot/package.json
@@ -6,12 +6,14 @@
     "dev": "nodemon --inspect=0.0.0.0 src/index.js",
     "start": "node src/index.js",
     "docker:build": "docker build -t resell-bot:dev .",
-    "docker:debug": "docker run -p 9229:9229 -v ./src:/root/app/src -it --env-file .env resell-bot:dev npm run dev"
+    "docker:debug": "docker run -p 9229:9229 -p 3000:3000 -v ./src:/root/app/src -it --env-file .env resell-bot:dev npm run dev"
   },
   "dependencies": {
     "@curvegrid/multibaas-sdk": "^1.0.0-beta26",
     "@ethsign/sp-sdk": "^0.7.8",
     "@xmtp/message-kit": "latest",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.1",
     "pinata": "^1.7.2",
     "pinata-web3": "^0.5.2"
   },
