--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@se-2/nextjs",
+  "name": "resell-web-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
   },
   "dependencies": {
+    "@ethsign/sp-sdk": "^0.7.7",
     "@heroicons/react": "~2.1.5",
     "@rainbow-me/rainbowkit": "2.1.6",
     "@tanstack/react-query": "~5.59.15",
@@ -31,7 +32,7 @@
     "react-dom": "~18.3.1",
     "react-hot-toast": "~2.4.0",
     "usehooks-ts": "~3.1.0",
-    "viem": "2.21.32",
+    "viem": "^2.21.32",
     "wagmi": "2.12.23",
     "zustand": "~5.0.0"
   },
