--- a/app/packages/nextjs/package.json
+++ b/app/packages/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resell-web-app",
+  "name": "@se-2/nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
   },
   "dependencies": {
+    "@arx-research/libhalo": "^1.10.6",
     "@ethsign/sp-sdk": "^0.7.7",
     "@heroicons/react": "~2.1.5",
     "@rainbow-me/rainbowkit": "2.1.6",
